--- a/package.json
+++ b/package.json
@@ -4,11 +4,19 @@
   "description": "Web Dev at Northeastern University",
   "main": "server.js",
   "dependencies": {
+    "angular-ui-bootstrap": "^2.5.0",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.17.2",
+    "cookie-parser": "^1.4.3",
     "ejs": "^2.5.6",
     "express": "^4.15.3",
+    "express-session": "^1.15.5",
     "mongoose": "^4.11.1",
     "multer": "^1.3.0",
+    "passport": "^0.4.0",
+    "passport-facebook": "^2.1.1",
+    "passport-google-oauth": "^1.0.0",
+    "passport-local": "^1.0.0",
     "q": "^1.5.0"
   },
   "devDependencies": {},
